Moved a LOT of stuff around, fixed all the styling issues, cleaned up the code to be more readable. Submitting does not work yet.

--- a/Frontend/src/styles/CreateListingWizard.css
+++ b/Frontend/src/styles/CreateListingWizard.css
@@ -1,86 +1,160 @@
 .wizard {
-    display: flex;
-    flex-direction: column;
-    flex-flow: column;
-    width: 100%;
-    height: 100%;
+  display: flex;
+  flex-direction: column;
+  flex-flow: column;
+  width: 100%;
+  height: 100%;
+}
+
+.stepwizard {
+  display: flex;
+  flex-direction: column;
+}
+
+.stepwizard > div > div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .step-container {
-    text-align: left;
-    display: flex;
-    flex-direction: column;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  width: 80%;
 }
 
 .step-container h1 {
-    margin: 5px;
-
+  margin: 5px 0px 5px 0px;
+  font-size: x-large;
 }
 
 .step-container p {
-    margin-left: 5px;
+  margin-left: 5px;
+  text-align: left;
 }
 
 .input-container {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
 }
 
-textarea {
-    resize: none;
-    width: 90%;
-    height: 80%;
+.jobdesc {
+  font-family: sans-serif;
+  font-size: small;
+  resize: vertical;
+  height: 80%;
+  width: 100%;
+  border: none;
+  border-radius: 10px;
+  padding: 15px;
+  margin: 5px;
+  box-shadow: 
+    inset 2px 2px 6px var(--light-shadow),
+    3px 3px 8px var(--light-shadow),
+    -3px -3px 10px white;
 }
 
 .wizard input {
-    margin: 5px;
+  width: 100%;
+}
+
+#job-info-err-msg {
+  color: red;
+  font-size: small;
+  align-self: flex-start;
+}
+
+#invalid-text {
+  box-shadow: 
+    inset 2px 2px 6px hsla(0, 90%, 40%, 0.3),
+    3px 3px 8px hsla(0, 90%, 40%, 0.3),
+    -3px -3px 10px hsla(0, 90%, 100%, 1);
+}
+
+#rf-text {
+  align-self: flex-start;
+  font-size: small;
+  color: gray; /* placeholder */
+}
+
+#inner-title {
+  align-self: flex-start;
+}
+
+.step-button-container {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  justify-content: right;
+}
+.step-two-buttons {
+  justify-content: space-between;
 }
 
 .wizard button {
-    height: 28px;
-    background-color: var(--background);
-    /* background-color: red; */
-    border-style: none;
-    padding: 2px 8px;
-    margin: 10px;
-    border-radius: 10px;
-    box-shadow: 5px 5px 8px var(--light-shadow), -5px -5px 10px var(--highlight);
+  height: 32px;
+  width: 150px;
+  background-color: var(--ukg-dark-green);
+  color: hsl(0, 0%, 95%);
+  cursor: pointer;
+  border-style: none;
+  padding: 2px 8px;
+  margin: 10px 2px;
+  border-radius: 10px;
+  box-shadow: 
+    5px 5px 8px var(--light-shadow), 
+    -5px -5px 10px var(--highlight);
 }
 
 .selectTag {
-    width: 80%;
-    margin: 5px;
+  width: 100%;
+  margin: 5px;
 }
 
-.field-error {
-    color: red;
+.add-tag-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: 100%;
+  margin-bottom: 10px;
 }
 
-.wizard button:hover {
-    box-shadow: inset 3px 3px 6px var(--light-shadow),
+#new-tag {
+  margin-left: 0;
+}
+
+#add-tag-btn {
+  width: 96px;
+  background-color: var(--background);
+  color: black; /* placeholder */
+}
+#add-tag-btn:hover {
+  box-shadow: 
+    inset 3px 3px 6px var(--light-shadow),
     inset -3px -3px 8px var(--highlight);
 }
 
 .nav {
-    margin-bottom: 15px;
-    text-align: center;
+  margin-bottom: 15px;
+  text-align: center;
 }
 
 .dot {
-    color: var(--ukg-dark-green);
-    cursor: pointer;
-    font-size: 36px;
-    line-height: 1;
-    margin: 0 15px;
-    opacity: .4;
-    text-shadow: none;
-    transition: opacity 1s ease,
-        text-shadow 1s ease;
-    will-change: opacity, text-shadow;
+  color: var(--ukg-dark-green);
+  font-size: 36px;
+  line-height: 1;
+  margin: 0 15px;
+  opacity: .4;
+  text-shadow: none;
+  transition: opacity 1s ease,
+    text-shadow 1s ease;
+  will-change: opacity, text-shadow;
 }
 
 .active {
-    color: var(--ukg-dark-green);
-    opacity: 1;
-    text-shadow: 0 0px 8px;
+  color: var(--ukg-dark-green);
+  opacity: 1;
 }
